# sei-coinflip

./: .gitignore  Cargo.toml  README.MD  deploy.zsh
coinflip/: Cargo.toml
coinflip/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contract 1/: Cargo.toml  README.MD  instantiate.zsh
contract-2/: Cargo.toml  deploy.json  deploy.zsh  execute.zsh  instantiate.json  instantiate.zsh  query.sh  readme.md
contract-2/.cargo/: config
contract-2/src/: contract.rs  error.rs  msg.rs  state.rs
empty-contract/: Cargo.toml
empty-contract/.cargo/: config
empty-contract/src/: contract.rs  lib.rs  msg.rs
src/: contract.rs  error.rs  msg.rs
test1/: Cargo.toml
test1/src/: lib.rs
test2/: Cargo.toml  NOTICE
test2/src/: contract.rs  msg.rs
test3/: Cargo.toml
test3/src/: contract.rs
