[package]
name = "coin-flip"
version = "0.1.0"
edition = "2021"


[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { version = "1.5.0" }
cosmwasm-storage = { version = "1.0.0" }
cw-storage-plus = "0.13.2"
cosmwasm-schema = "1.0.0"
serde-json-wasm = "0.4.1"
cw2 = "0.13.2"
cw20 = "0.13.2"
schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
thiserror = { version = "1.0.26" }
base64 = { version = "0.13.0" }
sei-cosmwasm = { version = "0.4.0" }
semver = "1"